# RomForge

./: .gitignore  Directory.Build.props  Directory.Build.targets  README.md  RomForge.sln
3DS.Core/: 3DS.Core.csproj
3DS.Core/Crypto/: KeySlot.cs  KeyStore.cs  SdCrypto.cs
3DS.Core/Enums/: ContentType.cs  InstallStatus.cs  TitleType.cs
3DS.Core/FileSystem/: CiFinishManager.cs  SdTitleScanner.cs  SmdhParser.cs  TmdParser.cs
3DS.Core/IO/: AesCbcSubStream.cs  ConcatStream.cs  NcchDecryptionStream.cs  PipeReaderStream.cs  PipeWriterStream.cs  SdDecryptStream.cs  SubStream.cs  ZcciDecompressStream.cs
3DS.Core/Interfaces/: IInstallSource.cs  (+2 more)
Common/: LogLevel.cs  Models.cs  ProgressReporter.cs  Utils.cs
DolphinTool.Core/: DolphinTool.Core.csproj
DolphinTool.Core/src/Source/Core/DolphinTool/: CMakeLists.txt  ConvertCommand.cpp  ConvertCommand.h  dolphin_rvz_wrapper.cpp  dolphin_rvz_wrapper.h
LibHac/: LibHac.csproj
NSW.Core/: KeySetProvider.cs  LibHacHelper.cs  MetadataReader.cs
NSW.HacPack/: NSW.HacPack.csproj
NSW.M1.Core/: NSW.M1.Core.csproj
NSW.Utils/: NspNameBuilder.cs  NswContainerFormat.cs
NSW.WPF/: NSW.WPF.csproj
PBP.Core/: PBP.Core.csproj
Patch.Core/: Patch.Core.csproj  UniversalPatcher.cs  xdelta3_wrapper.c
PickPack.Disk/: DriveInfos.cs  HttpGzipWriteHandler.cs  ImageWriterHandler.cs  PickPack.Disk.csproj
RomForge/: App.xaml  RomForge.csproj
RomForge.Core/: AppConfig.cs  PatchConfig.cs  RomForge.Core.csproj
RomZip.Core/: RomZip.Core.csproj
WiiU.Core/: CompileDate.cs  Settings.cs  Starter.cs
binary/: movable.sed  title.db
(+532 files in other folders)
